--- a/public/index.html
+++ b/public/index.html
@@ -21,42 +21,84 @@
 	</div>
 	<button id="randomizeData">Randomize Data</button>
 	<script>
+		function loadJSON(callback) {   
+			var xobj = new XMLHttpRequest();
+				xobj.overrideMimeType("application/json");
+			xobj.open('GET', 'data.json', true); // Replace 'my_data' with the path to your file
+			xobj.onreadystatechange = function () {
+				if (xobj.readyState == 4 && xobj.status == "200") {
+					// Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
+					callback(xobj.responseText);
+				}
+			};
+			xobj.send(null);  
+		}
+
+		function getFormattedDate( timestamp ) {
+			var date = new Date();
+			date.setTime(timestamp);
+
+			var month = date.getMonth() + 1;
+			var day = date.getDate();
+			var hour = date.getHours();
+			var min = date.getMinutes();
+			var sec = date.getSeconds();
+
+			month = (month < 10 ? "0" : "") + month;
+			day = (day < 10 ? "0" : "") + day;
+			hour = (hour < 10 ? "0" : "") + hour;
+			min = (min < 10 ? "0" : "") + min;
+			sec = (sec < 10 ? "0" : "") + sec;
+
+			var str = date.getFullYear() + "-" + month + "-" + day + " " +  hour + ":" + min;
+
+			/*alert(str);*/
+
+			return str;
+		}
+
+
+		
+
 		var lineChartData = {
-			labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
+			labels: [],
 			datasets: [{
-				label: 'My First dataset',
+				label: 'Cellar',
 				borderColor: window.chartColors.red,
 				backgroundColor: window.chartColors.red,
 				fill: false,
-				data: [
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor()
-				],
+				data: [],
 				yAxisID: 'y-axis-1',
 			}, {
-				label: 'My Second dataset',
+				label: 'Ground',
 				borderColor: window.chartColors.blue,
 				backgroundColor: window.chartColors.blue,
 				fill: false,
-				data: [
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor(),
-					randomScalingFactor()
-				],
+				data: [],
 				yAxisID: 'y-axis-2'
+			},
+			{
+				label: 'First',
+				borderColor: window.chartColors.green,
+				backgroundColor: window.chartColors.green,
+				fill: false,
+				data: [],
+				yAxisID: 'y-axis-3'
 			}]
 		};
 
 		window.onload = function() {
+
+			loadJSON(function(response) {
+    		var data = JSON.parse(response);
+
+			lineChartData.labels = data.map((v) => { return getFormattedDate(v.timestamp) });
+
+			lineChartData.datasets[0].data = data.map((v) => { return v.cellar });
+			lineChartData.datasets[1].data = data.map((v) => { return v.ground });
+			lineChartData.datasets[2].data = data.map((v) => { return v.first });
+			console.log(data);
+				
 			var ctx = document.getElementById('canvas').getContext('2d');
 			window.myLine = Chart.Line(ctx, {
 				data: lineChartData,
@@ -84,10 +126,24 @@
 							gridLines: {
 								drawOnChartArea: false, // only want the grid lines for one axis to show up
 							},
+						}, {
+							type: 'linear', // only linear but allow scale type registration. This allows extensions to exist solely for log scale for instance
+							display: false,
+							position: 'right',
+							id: 'y-axis-3',
+
+							// grid line settings
+							gridLines: {
+								drawOnChartArea: false, // only want the grid lines for one axis to show up
+							},
 						}],
 					}
 				}
 			});
+
+ 			});
+
+			
 		};
 
 		document.getElementById('randomizeData').addEventListener('click', function() {
@@ -99,6 +155,7 @@
 
 			window.myLine.update();
 		});
+
 	</script>
 </body>
 
