--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
 					stacked: false,
 					title: {
 						display: true,
-						text: 'Chart.js Line Chart - Multi Axis'
+						text: 'Temperatures'
 					},
 					scales: {
 						yAxes: [{
