--- a/public/index.html
+++ b/public/index.html
@@ -66,23 +66,20 @@
 				borderColor: window.chartColors.red,
 				backgroundColor: window.chartColors.red,
 				fill: false,
-				data: [],
-				yAxisID: 'y-axis-1',
+				data: []
 			}, {
 				label: 'Ground',
 				borderColor: window.chartColors.blue,
 				backgroundColor: window.chartColors.blue,
 				fill: false,
-				data: [],
-				yAxisID: 'y-axis-2'
+				data: []
 			},
 			{
 				label: 'First',
 				borderColor: window.chartColors.green,
 				backgroundColor: window.chartColors.green,
 				fill: false,
-				data: [],
-				yAxisID: 'y-axis-3'
+				data: []
 			}]
 		};
 
@@ -103,47 +100,44 @@
 				data: lineChartData,
 				options: {
 					responsive: true,
-					hoverMode: 'index',
-					stacked: false,
 					title: {
 						display: true,
-						text: 'Temperatures'
+						text: 'Chart.js Line Chart'
+					},
+					tooltips: {
+						mode: 'index',
+						intersect: false,
+					},
+					hover: {
+						mode: 'nearest',
+						intersect: true
 					},
 					scales: {
-						yAxes: [{
-							type: 'linear', // only linear but allow scale type registration. This allows extensions to exist solely for log scale for instance
+						xAxes: [{
 							display: true,
-							position: 'left',
-							id: 'y-axis-1',
-						}, {
-							type: 'linear', // only linear but allow scale type registration. This allows extensions to exist solely for log scale for instance
-							display: true,
-							position: 'right',
-							id: 'y-axis-2',
-
-							// grid line settings
-							gridLines: {
-								drawOnChartArea: false, // only want the grid lines for one axis to show up
-							},
-						}, {
-							type: 'linear', // only linear but allow scale type registration. This allows extensions to exist solely for log scale for instance
-							display: false,
-							position: 'right',
-							id: 'y-axis-3',
-
-							// grid line settings
-							gridLines: {
-								drawOnChartArea: false, // only want the grid lines for one axis to show up
-							},
+							scaleLabel: {
+								display: true,
+								labelString: 'Month'
+							}
 						}],
+						yAxes: [{
+							display: true,
+							scaleLabel: {
+								display: true,
+								labelString: 'Value'
+							},
+							ticks: {
+								min: 5,
+								max: 30
+							}
+						}]
 					}
 				}
 			});
 
- 			});
-
-			
-		};
+		});
+		
+	};
 
 
 	</script>
