--- a/public/index.html
+++ b/public/index.html
@@ -62,22 +62,44 @@
 		var lineChartData = {
 			labels: [],
 			datasets: [{
-				label: 'Cellar',
-				borderColor: window.chartColors.red,
-				backgroundColor: window.chartColors.red,
+				label: 'Cellar target',
+				borderColor: "lightBlue",
+				backgroundColor: "lightBlue",
 				fill: false,
 				data: []
-			}, {
+			},
+			{
+				label: 'Cellar',
+				borderColor: "blue",
+				backgroundColor: "blue",
+				fill: false,
+				data: []
+			}
+			, {
+				label: 'Ground target',
+				borderColor: "pink",
+				backgroundColor: "pink",
+				fill: false,
+				data: []
+			},
+			{
 				label: 'Ground',
-				borderColor: window.chartColors.blue,
-				backgroundColor: window.chartColors.blue,
+				borderColor: "red",
+				backgroundColor: "red",
+				fill: false,
+				data: []
+			},
+			{
+				label: 'First target',
+				borderColor: "lightGreen",
+				backgroundColor: "lightGreen",
 				fill: false,
 				data: []
 			},
 			{
 				label: 'First',
-				borderColor: window.chartColors.green,
-				backgroundColor: window.chartColors.green,
+				borderColor: "green",
+				backgroundColor: "green",
 				fill: false,
 				data: []
 			}]
@@ -90,9 +112,12 @@
 
 			lineChartData.labels = data.map((v) => { return getFormattedDate(v.timestamp) });
 
-			lineChartData.datasets[0].data = data.map((v) => { return v.cellar });
-			lineChartData.datasets[1].data = data.map((v) => { return v.ground });
-			lineChartData.datasets[2].data = data.map((v) => { return v.first });
+			lineChartData.datasets[0].data = data.map((v) => { return v.cellar.target });
+			lineChartData.datasets[1].data = data.map((v) => { return v.cellar.temp });
+			lineChartData.datasets[2].data = data.map((v) => { return v.ground.target });
+			lineChartData.datasets[3].data = data.map((v) => { return v.ground.temp });
+			lineChartData.datasets[4].data = data.map((v) => { return v.first.target });
+			lineChartData.datasets[5].data = data.map((v) => { return v.first.temp });
 			console.log(data);
 				
 			var ctx = document.getElementById('canvas').getContext('2d');
