added some styling

--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,21 @@
 		-webkit-user-select: none;
 		-ms-user-select: none;
 	}
+	html, body {
+		background-color: #1a1a1a;
+		text-align: center;
+		margin: 0;
+		padding: 0;
+	}
 	</style>
 </head>
 
 <body>
-	<div style="width:90%;">
-		<canvas id="canvas"></canvas>
-	</div>
+	<center>
+		<div style="width:90%;">
+			<canvas id="canvas"></canvas>
+		</div>
+	</center>
 	<script>
 		var colors = [
 			{"temp" : "rgb(255,0,0)", "target": "rgb(255,0,0,0.5)"},
