--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Line Chart Multiple Axes</title>
+	<title>Evohome Monitor</title>
 	<script src="https://www.chartjs.org/dist/2.9.4/Chart.min.js"></script>
 	<script src="https://www.chartjs.org/samples/latest/utils.js"></script>
 	<style>
