--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,8 @@
 								label: row.name,
 								borderColor: colors[colorIndex].temp,
 								backgroundColor: colors[colorIndex].temp,
+								pointRadius: 1,	
+								pointHoverRadius: 2,
 								fill: false,
 								data: []
 							};
@@ -126,6 +128,8 @@
 								label: row.name + " Target",
 								borderColor: colors[colorIndex].target,
 								backgroundColor: colors[colorIndex].target,
+								pointRadius: 1,	
+								pointHoverRadius: 2,
 								fill: false,
 								data: []
 							};
