--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,7 @@
 								backgroundColor: weatheColor,
 								pointRadius: 0,	
 								pointHoverRadius: 2,
+								borderWidth: 2,
 								fill: false,
 								data: []
 							};
@@ -131,6 +132,7 @@
 								backgroundColor: colors[colorIndex].temp,
 								pointRadius: 0,	
 								pointHoverRadius: 2,
+								borderWidth: 2,
 								fill: false,
 								data: []
 							};
@@ -140,6 +142,7 @@
 								backgroundColor: colors[colorIndex].target,
 								pointRadius: 0,	
 								pointHoverRadius: 2,
+								borderWidth: 2,
 								fill: false,
 								data: []
 							};
@@ -205,10 +208,6 @@
 							scaleLabel: {
 								display: true,
 								labelString: 'Value'
-							},
-							ticks: {
-								min: -15,
-								max: 40
 							}
 						}]
 					}
